Add search functionality for projects, update Prompt data and generate Prompt elements, add copy description to clipboard function, and update script.js for Prompt features
This commit adds search functionality for projects, updates Prompt data and generates Prompt

--- a/assets/images/projects/desktop.ini
+++ b/assets/images/projects/desktop.ini
@@ -10,3 +10,5 @@ Screenshot (479).png=@Screenshot (479).png,0
 Screenshot (480).png=@Screenshot (480).png,0
 Screenshot (499).png=@Screenshot (499).png,0
 Screenshot (498).png=@Screenshot (498).png,0
+Screenshot (500).png=@Screenshot (500).png,0
+Screenshot (502).png=@Screenshot (502).png,0
